fix the width of projects on small screens

--- a/style/layout.scss
+++ b/style/layout.scss
@@ -471,6 +471,9 @@ a {
       justify-content: left;
       align-items: center;
       width: 700px;
+      @include md {
+        width: 400px;
+      }
     }
 
     .boxlink {
